# MLZoomCampSolutions

./: .gitignore  README.md
capstone/: .gitignore  Dockerfile-lambda  README.md  cdk.json  convert.py  lambda-infrastructure.py  notebook.ipynb  predict.py  pyproject.toml  requirements.txt  test-lambda-locally.py  train.py
capstone/face-age-detection/: README.md
capstone/static/: index.html
homework1/: homework.ipynb
midterm/: Dockerfile  Dockerfile-lambda  README.md  clean.py  lambda-infrastructure.py  notebook.ipynb  predict.py  pyproject.toml  render.yaml  test-lambda-locally.py  test_training_data_helpers.py  train.py  training_data_helpers.py
midterm/copilot/: .workspace
midterm/copilot/laptop-price-prediction/: manifest.yml
midterm/data/: amazon_laptop_prices_v01_cleaned.csv
midterm/static/: index.html
week1/: homework.ipynb
week10/: deployment.yaml  homework.ipynb
week2/: homework.ipynb  notes.ipynb
week3/: homework.ipynb  notes.ipynb
week4/: homework.ipynb  notes.ipynb
week5/: Dockerfile  homework.md  main.py
week6/: homework.ipynb
week8/: .gitignore  homework.ipynb
week8/bee-wasp/: README.md
week9/: Dockerfile  homework.ipynb  lambda.py  pyproject.toml
