[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["Tzvi Friedman <tadwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gunicorn = "^21.2.0"
flask = "^3.0.0"
tensorflow-macos = { version = "^2.15.0", markers = "platform_system=='Darwin' and platform_machine=='arm64'" }
tensorflow = "^2.15.0"
pip = "^23.3.1"
pillow = "^10.1.0"
requests = "^2.31.0"
pandas = "^2.1.3"
pickle-mixin = "^1.0.2"
scikit-learn = "^1.3.2"
apig-wsgi = "^2.18.0"
seaborn = "^0.13.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
seaborn = "^0.13.0"
pytest = "^7.4.3"
aws-cdk-lib = "^2.110.1"
constructs = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
