[tool.poetry]
name = "midterm"
version = "0.1.0"
description = "Laptop Price predictor"
authors = ["Tzvi Friedman <tadwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gunicorn = "^21.2.0"
flask = "^3.0.0"
pandas = "^2.1.2"
pickle-mixin = "^1.0.2"
xgboost = "^2.0.1"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
